# uav_structural_inspection_ros_pkg

./: CMakeLists.txt  README.md  package.xml
launch/: my_gazebo_launch.py
models/Cylinder/: import_mesh.sdf  model.sdf
models/Cylinder/meshes/: cylinder.dae
src/: odom_publisher.cpp  wp_camera_service_server.cpp  wp_nav.cpp
worlds/: my_mesh.world
